<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="1dp">

            <TextView
                android:id="@+id/topicList"
                style="@style/TextStyle.Heading"
                android:layout_width="match_parent"
                android:layout_height="?listPreferredItemHeight"
                android:gravity="center"
                android:textSize="20sp"
                tools:text="Featured" />
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layoutBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            app:cardCornerRadius="0dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/large">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNewTopic"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeight"
                    android:text="@string/new_topic" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnFollowBoard"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeight"
                    android:text="@string/follow_board" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/large">


                <TextView
                    style="@style/TextAppearance.MaterialComponents.Caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium"
                    android:text="@string/page"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium"
                    android:layout_marginBottom="@dimen/medium"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/small"
                    android:paddingBottom="@dimen/small">

                    <androidx.legacy.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <com.amebo.amebo.common.widgets.AutoTintImageButton
                        android:id="@+id/btnPrevPage"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:enabled="false"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_keyboard_arrow_left_24dp"
                        android:tint="@color/button_color_primary_bg_selector"
                        app:enabledTint="?colorPrimary" />

                    <androidx.legacy.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        tools:ignore="UselessLeaf" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPage"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionNone"
                        android:inputType="number"
                        android:padding="@dimen/medium"
                        android:textAlignment="center"
                        tools:text="15375" />


                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium"
                        android:autofillHints="none"
                        android:background="@android:color/white"
                        android:clickable="false"
                        android:focusable="false"
                        android:gravity="center"
                        android:imeOptions="actionDone"
                        android:inputType="none"
                        android:textAlignment="center"
                        android:visibility="gone"
                        tools:text="of 1356" />


                    <androidx.legacy.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <com.amebo.amebo.common.widgets.AutoTintImageButton
                        android:id="@+id/btnNextPage"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="?selectableItemBackgroundBorderless"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_keyboard_arrow_right_24dp"
                        android:tint="@color/button_color_primary_bg_selector"
                        app:enabledTint="?colorPrimary" />

                    <androidx.legacy.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnVisitPage"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="?listPreferredItemHeight"
                    android:layout_marginTop="@dimen/medium"
                    android:text="@string/go" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>
