...
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="settings">Settings</string>
    <string name="search_options">Search options</string>
    <string name="only_show_topic_posts">Only show topic posts</string>
    <string name="only_show_posts_with_images">Only show posts with images</string>
    <string name="all_boards">All boards</string>
    <string name="followed_boards">Followed boards</string>
    <string name="recent_boards">Recent Boards</string>
    <string name="multi_boards">Multi-Boards</string>
    <string name="results_for">Results for \"%s\"…</string>
    <string name="search_boards">Search Boards</string>
    <string name="information">Information</string>
    <string name="find_in_page">Find in Page</string>
...
    <string name="which_rules_were_broken">Which Rules Were Broken?</string>
    <string name="closed_topic">This topic is closed for new posts</string>
    <string name="title">Title</string>
    <string name="select_board">Select board</string>
    <string name="users_followed_by_x">%s\'s friends</string>
    <string name="error_storage_permission">Amebo needs permission to access external storage</string>
    <string name="featured">Featured</string>
    <string name="trending">Trending</string>
    <string name="new_topics">New topics</string>
    <string name="users_topics">%s topics</string>
    <string name="followed_topics">Followed topics</string>
    <string name="users_posts">%s\'s posts</string>
    <string name="key_current_user">current_user</string>
...
